Item9961: Big changes incl. QuerySearch backlinks
   * Added META:LINK type which caches most links in the topic content
   * Renamed =slpropertyvalues= QuerySearch alias to =slvalues=. You will need
     to re-write your queries.
   * Renamed META:SLPROPERTYVALUE to META:SLVALUE, among other schema changes.
   * Added a rest script to bulk-update topics with META:LINK and the new
     META:SL... schema.
   * Changed template tokens to do $value(web) form instead of $valueweb (the
     old form still works, no need to update templates).

git-svn-id: http://svn.foswiki.org/trunk/SemanticLinksPlugin@11644 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/templates/semanticlinksplugin.tmpl
+++ b/templates/semanticlinksplugin.tmpl
@@ -1,22 +1,22 @@
 %TMPL:DEF{"SemanticLinksPlugin::Link"}%<a \
     class="foswikiSemanticLinksPlugin" \
-    href="%SCRIPTURLPATH{"view"}%/$valueweb/$valuetopic$valueqquery$valueaanchor" \
-    title="$property">$valuetopic</a>%TMPL:END%
+    href="%SCRIPTURLPATH{"view"}%/$value(web)/$value(topic)$value(qquery)$value(aanchor)" \
+    title="$property">$value(topic)</a>%TMPL:END%
 %TMPL:DEF{"SemanticLinksPlugin::LinkWithText"}%<a \
     class="foswikiSemanticLinksPlugin" \
-    href="%SCRIPTURLPATH{"view"}%/$valueweb/$valuetopic$valueqquery$valueaanchor" \
+    href="%SCRIPTURLPATH{"view"}%/$value(web)/$value(topic)$value(qquery)$value(aanchor)" \
     title="$property">$text</a>%TMPL:END%
 %TMPL:DEF{"SemanticLinksPlugin::MissingLink"}%<span \
-    class="foswikiNewLink foswikiSemanticLinksPlugin">$valueweb.$valuetopic
+    class="foswikiNewLink foswikiSemanticLinksPlugin">$value(web).$value(topic)
         <a \
-            href="%SCRIPTURLPATH{"edit"}%/$valueweb/$valuetopic?topicparent=%WEB%.%TOPIC%" \
+            href="%SCRIPTURLPATH{"edit"}%/$value(web)/$value(topic)?topicparent=%WEB%.%TOPIC%" \
             rel="nofollow" title="%MAKETEXT{"Create this topic"}%">?
         </a>
     </span>%TMPL:END%
 %TMPL:DEF{"SemanticLinksPlugin::MissingLinkWithText"}%<span \
     class="foswikiNewLink foswikiSemanticLinksPlugin">$text
         <a \
-            href="%SCRIPTURLPATH{"edit"}%/$valueweb/$valuetopic?topicparent=%WEB%.%TOPIC%" \
+            href="%SCRIPTURLPATH{"edit"}%/$value(web)/$value(topic)?topicparent=%WEB%.%TOPIC%" \
             rel="nofollow" title="%MAKETEXT{"Create this topic"}%">?
         </a>
     </span>%TMPL:END%
